<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="180dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pwdField"
        android:id="@+id/setPwdText"
        android:textColor="@color/white"
        android:textSize="20sp"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/pwdField"
        android:layout_marginTop="30dp"
        android:hint="@string/Pwd"
        android:textColorHint="@color/semi_transparent"
        android:backgroundTint="@color/white"
        android:textCursorDrawable="@null"
        android:textColor="@color/white"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/setPwdText"
        app:layout_constraintBottom_toTopOf="@id/pwdCheckField"
        app:layout_constraintRight_toRightOf="parent"
        />
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/pwdCheckField"
        android:textColor="@color/white"
        android:inputType="textPassword"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/white"
        android:textColorHint="@color/semi_transparent"
        android:hint="@string/confirmPwd"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwdField"
        app:layout_constraintRight_toRightOf="parent"
        />
    <Button
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@color/white"
        android:text="@string/savePwd"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:id="@+id/savePwdButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pwdCheckField"
        app:layout_constraintBottom_toTopOf="@id/textNoPatchPwd"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#ff442b"
        android:textSize="18sp"
        android:text="@string/textNoMatchPwd"
        android:id="@+id/textNoPatchPwd"
        android:layout_marginBottom="80dp"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/savePwdButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</android.support.constraint.ConstraintLayout>