<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".SpecsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:id="@+id/logo_ll"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/deviceSpecsText">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:src="@drawable/logo"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/deviceSpecs"
        android:id="@+id/deviceSpecsText"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo_ll"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sv"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sv"
        app:layout_constraintTop_toBottomOf="@id/deviceSpecsText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="20dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/brand_icon"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getBrand"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/model_icon"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getModel"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getCpuModel"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getScreenSize"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getScreenDimension"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getBatteryCapacity"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getRamSize"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getGpuModel"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getStorageSize"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getCameraMp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getFrontCameraMp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getSimState"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getAndroidVersion"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:background="@drawable/gradient_single_line">
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/cpu_icon"
                    android:layout_gravity="center_vertical"
                    android:paddingTop="15dp"
                    android:paddingBottom="15dp"
                    android:layout_marginStart="20dp"
                    android:contentDescription="@string/brandText" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/unknown"
                    android:layout_marginStart="100dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:id="@+id/getWarranty"/>
            </LinearLayout>
            <Button
                android:layout_height="50dp"
                android:layout_width="50dp"
                android:layout_marginEnd="0dp"
                android:alpha="0"
                android:id="@+id/editSpecsHiddenButton"
                />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>